# opencv_project

./: CMakeLists.txt  main.cpp  old CMake
